k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shield-backend
spec:
  selector:
    matchLabels:
      app: shield-backend
  template:
    metadata:
      labels:
        app: shield-backend
    spec:
      containers:
        - name: shield-backend
          image: registry.karc.io/dnd/shield-backend:dev
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "50m"
          ports:
            - containerPort: 3000
