k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shield-backend
spec:
  selector:
    app: shield-backend
  ports:
    - port: 3000
      targetPort: 3000
